1. モジュール定義を修正し、ビルド可とした。 2. Font Awesomeを使ってブランドアイコンを表示できるようにした。 3. ナビゲーションにGitHubのアイコンを表示。

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -2,12 +2,12 @@
 
 <html>
   <head>
-    <meta charset=UTF-8>
-    <link type="text/css" rel="stylesheet" href="css/Horz-CV.css">
-    <link type="text/css" rel="stylesheet" href="css/brands.min.css">
+    <meta charset="utf-8">
     <title>Horz CV</title>
-    <!-- If you add any GWT meta tags, they must be added before this line. -->
-    <script src="horzcv.nocache.js"></script>
+    <link type="text/css" rel="stylesheet" href="horzcv/css/Horz-CV.css">
+    <script src="horzcv/js/fontawesome.min.js"></script>
+    <script src="horzcv/js/brands.min.js"></script>
+    <script src="horzcv/horzcv.nocache.js"></script>
   </head>
 
   <body>
