プロトタイプ

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -3,6 +3,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="description" content="Horz CV is an application that can open up to six chat windows for Youtube Live and Twitch.">
     <title>Horz CV</title>
     <link type="text/css" rel="stylesheet" href="horzcv/css/Horz-CV.css">
     <script src="horzcv/js/fontawesome.min.js"></script>
@@ -19,7 +20,7 @@
       </div>
     </noscript>
 
-    <div>
+    <div id="root-div">
       <div id="header"></div>
       <div id="content"></div>
       <div id="footer"></div>
