コンパイル時にClosureCompilerを使用しないように変更。ホスト名を適切に取得するように変更。使用するファビコンを使用するように変更。

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="description" content="Horz CV is an application that can open up to six chat windows for Youtube Live and Twitch.">
     <title>Horz CV</title>
+    <link rel="icon" href="favicon.ico" />
     <link type="text/css" rel="stylesheet" href="horzcv/css/Horz-CV.css">
     <script src="horzcv/js/fontawesome.min.js"></script>
     <script src="horzcv/js/brands.min.js"></script>
