--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -6,15 +6,14 @@
     <meta name="description" content="Horz CV is an application that can open up to six chat windows for Youtube Live and Twitch.">
     <title>Horz CV</title>
     <link rel="icon" href="favicon.ico" />
-    <link type="text/css" rel="stylesheet" href="/horzcv/css/Horz-CV.css">
-    <link rel="stylesheet" href="/horzcv/css/domino-ui/domino-ui.css">
-    <script src="/horzcv/horzcv.nocache.js"></script>
+    <link type="text/css" rel="stylesheet" href="horzcv/css/Horz-CV.css">
+    <link rel="stylesheet" href="horzcv/css/domino-ui/domino-ui.css">
+    <script src="horzcv/horzcv.nocache.js"></script>
   </head>
 
   <body>
 
-    <iframe id="__gwt_historyFrame" src="javascript:''" style="position:absolute;width:0;height:0;border:0" tabIndex='-1'>
-    </iframe>
+    <iframe id="__gwt_historyFrame" src="javascript:''" style="position:absolute;width:0;height:0;border:0" tabIndex='-1'></iframe>
 
     <noscript>
       <div style="width: 22em; position: absolute; left: 50%; margin-left: -11em; color: red; background-color: white; border: 1px solid red; padding: 4px; font-family: sans-serif">
