--- a/horzcv-client/src/main/webapp/index.html
+++ b/horzcv-client/src/main/webapp/index.html
@@ -6,6 +6,16 @@
     <meta name="description" content="Horz CV is an application that can open up to six chat windows for Youtube Live and Twitch.">
     <title>Horz CV</title>
     <link rel="icon" href="favicon.ico" />
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-GEX9B1VTVX"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-GEX9B1VTVX');
+    </script>
+    <script src="https://kit.fontawesome.com/ec39333591.js" crossorigin="anonymous"></script>
     <link type="text/css" rel="stylesheet" href="horzcv/css/Horz-CV.css">
     <link rel="stylesheet" href="horzcv/css/domino-ui/domino-ui.css">
     <script src="horzcv/horzcv.nocache.js"></script>
